crates/jarl/tests/integration/snapshots/integration__jarl__parsing_error_for_some_files.snap
---
source: crates/jarl/tests/integration/jarl.rs
expression: "&mut\nCommand::new(binary_path()).current_dir(directory).arg(\"check\").arg(\".\").arg(\"--allow-no-vcs\").run().normalize_os_executable_name()"
---
success: false
exit_code: 255
----- stdout -----
warning: any_is_na
 --> test2.R:1:1
  |
1 | any(is.na(x))
  | ^^^^^^^^^^^^^ `any(is.na(...))` is inefficient.
  |
help: Use `anyNA(...)` instead.

Found 1 error.
1 fixable with the `--fix` option.

----- stderr -----
Error: Failed to parse test.R due to syntax errors.


----- args -----
check . --allow-no-vcs
