crates/jarl/tests/integration/snapshots/integration__jarl__safe_and_unsafe_lints.snap
---
source: crates/jarl/tests/integration/jarl.rs
expression: "&mut\nCommand::new(binary_path()).current_dir(directory).arg(\"check\").arg(\".\").arg(\"--allow-no-vcs\").run().normalize_os_executable_name()"
---

success: false
exit_code: 1
----- stdout -----
warning: any_is_na
 --> test.R:1:1
  |
1 | any(is.na(x))
  | ------------- `any(is.na(...))` is inefficient.
  |
  = help: Use `anyNA(...)` instead.

warning: all_equal
 --> test2.R:1:1
  |
1 | !all.equal(x, y)
  | ---------------- If `all.equal()` is false, it will return a string and not `FALSE`.
  |
  = help: Wrap `all.equal()` in `isTRUE()`, or replace it by `identical()` if no tolerance is required.

Found 2 errors.
1 fixable with the `--fix` option (1 hidden fix can be enabled with the `--unsafe-fixes` option).

----- stderr -----

----- args -----
check . --allow-no-vcs
